<resources>
    <string name="app_name">ToDo List</string>
    <string name="is_completed">Done?</string>
    <string name="name">Name</string>
    <string name="date">Date Due</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="error_update">Cannot update!</string>
    <string name="error_save">Cannot save!</string>
    <string name="add_todo">Add ToDo</string>
    <string name="blank_todo_warning">Please insert a title and description</string>
    <string name="wipe_database">Wipe database</string>
    <string name="edit_todo">Edit ToDo</string>
    <string name="updated">Updated!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="details">Details</string>
    <string name="confirm">Are you sure you want to delete this?</string>
    <string name="delete">Delete</string>
    <string name="swipe_error">Swipe error</string>
    <string name="left_swipe">Left swipe</string>
    <string name="right_swipe">Right swipe</string>
</resources>
