<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/complete_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/is_completed"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <DatePicker
            android:id="@+id/date_picker"
            style="@android:style/Widget.DatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thumbnail"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/path" />

        <ImageButton
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerInside" />

        <Button
            android:id="@+id/save_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
